welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if (num(k+1)= num(k) +1) {
                            ^